--- a/src/app/home/layout/footer/footer.component.html
+++ b/src/app/home/layout/footer/footer.component.html
@@ -2,6 +2,7 @@
     <div class="content">
         <nav class="fnb">
             <ul class="ul_h">
+                <li><a href="http://59.15.3.210:8058/#/login" target="_blank">파트너센터</a></li>
                 <li><a href="#">회원이용약관</a></li>
                 <li><a href="#">개인정보처리방침</a></li>
                 <li><a href="#">이메일무단수집거부</a></li>
