--- a/src/app/home/accom-list/accom-list.component.scss
+++ b/src/app/home/accom-list/accom-list.component.scss
@@ -87,4 +87,4 @@ h2 { margin: 80px 0 20px 0; font-size: 32px; font-weight: 700; }
 .add_option_box .option_item .del_btn { position: absolute; top: 15px; left: -20px; width: 13px; height: 13px; background: url('/assets/images/del_btn.png'); cursor: pointer; }
 
 .list_option .list_price { text-align: right; font-size: 28px; font-weight: 700; }
-.list_option .list_price .orig_price { text-decoration: line-through; color: #999; font-size: 15px; }
+.list_price .orig_price, .price .orig_price { text-decoration: line-through; color: #999; font-size: 15px; }
