a 태그 important 제거

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,7 +20,7 @@ ul, li, ol{
 
 a {
     color: #000;
-    text-decoration: none !important;
+    text-decoration: none;
 }
 
 img, fieldset, button, input {
