할인율과 가격 사이 간격

--- a/src/app/home/main/main.component.scss
+++ b/src/app/home/main/main.component.scss
@@ -31,7 +31,7 @@
 .popular_box .popular_item_desc .price { position: absolute; bottom: 20px; }
 .popular_box .popular_item_desc .price dl { display: inline-block; margin-right: 15px; }
 .popular_box .popular_item_desc .price dt { display: inline-block; color: #999; }
-.popular_box .popular_item_desc .price dd { display: inline-block; color: #93b85f; font-weight: 500; }
+.popular_box .popular_item_desc .price dd { display: inline-block; margin-left: 5px; color: #93b85f; font-weight: 500; }
 
 /** sec_recommend **/
 .sec_recommend { background-color: #f7f7f7; }
