HEADER, FOOTER scss 파일 분리

--- a/src/app/home/layout/footer/footer.component.html
+++ b/src/app/home/layout/footer/footer.component.html
@@ -2,7 +2,6 @@
     <div class="content">
         <nav class="fnb">
             <ul class="ul_h">
-                <li><a href="http://59.15.3.210:8058/#/login" target="_blank">파트너센터</a></li>
                 <li><a href="#">회원이용약관</a></li>
                 <li><a href="#">개인정보처리방침</a></li>
                 <li><a href="#">이메일무단수집거부</a></li>
@@ -14,15 +13,19 @@
 </div>
 <footer id="footer">
     <div class="content">
-        <p class="c_name">모빌라 주식회사</p>
-        <ul class="ul_h">
-            <li>대표: 백준석</li>
-            <li>이메일: movilla8@uip.co.kr</li>
-            <li>개인정보관리책임자: 금수현</li>
-            <li>사업자등록번호: 534-87-01707</li>
-            <li>사업장 주소: 서울특별시 영등포구 선유로 146, 910호(양평동3가)</li>
-            <li>전화번호: 031-932-8188</li>
-        </ul>
+        <p>모빌라 주식회사</p>
+        <div class="info">
+            <ul class="ul_h">
+                <li>대표: 백준석</li>
+                <li>이메일: movilla8@uip.co.kr</li>
+                <li>개인정보관리책임자: 금수현</li>
+                <li>사업자등록번호: 534-87-01707</li>
+            </ul>
+            <ul class="ul_h">
+                <li>사업장 주소: 서울특별시 영등포구 선유로 146, 910호(양평동3가)</li>
+                <li>전화번호: 031-932-8188</li>
+            </ul>
+        </div>
         <p class="copyright">
             copyrightⓒ 모빌라 all rights reserved.
         </p>
