--- a/src/assets/var.scss
+++ b/src/assets/var.scss
@@ -10,7 +10,7 @@ $gray_bg: #fbfbfb;
 $basic_border: 1px solid #ddd;
 $gray_border: 1px solid #eee;
 
-$img_url: '/src/assets/images/';
+$img_url: '/assets/images/';
 
 @mixin clear {
     display: block;
