일반 상품 링크 적용 옵션 상품 토글 적용 객실 추가인원 요금 연박수에 비례 	modified:   src/app/home/accom-list/accom-list.component.html 	modified:   src/app/home/unit-list/unit-list.component.html 	modified:   src/app/home/unit-list/unit-list.component.ts

--- a/src/app/home/accom-list/accom-list.component.html
+++ b/src/app/home/accom-list/accom-list.component.html
@@ -116,7 +116,7 @@
             <div>
                 <ul class="nm_list">
                     <!-- loop -->
-                    <li *ngFor="let item of list">
+                    <li *ngFor="let item of list" (click)="goDetail(item.AcomId)">
                         <div class="list_img">
                             <img src="{{ item.link }}" alt="">
                         </div>
